@@ -128,8 +128,41 @@ namespace libtorrent
 
 		start = end;
 exit:
-		return std::make_tuple(protocol, auth, hostname, port
+		return std::make_tuple(std::move(protocol)
+			, std::move(auth)
+			, std::move(hostname)
+			, port
 			, std::string(start, url.end()));
+	}
+
+	// splits a url into the base url and the path
+	std::tuple<std::string, std::string>
+		split_url(std::string url, error_code& ec)
+	{
+		std::string base;
+		std::string path;
+
+		// PARSE URL
+		std::string::iterator pos
+			= std::find(url.begin(), url.end(), ':');
+
+		if (pos == url.end() || url.end() - pos < 2
+			|| *(pos + 1) != '/' || *(pos + 2) != '/')
+		{
+			ec = errors::unsupported_url_protocol;
+			return std::make_tuple(url, path);
+		}
+		pos += 3; // skip "://"
+
+		pos = std::find(pos, url.end(), '/');
+		if (pos == url.end())
+		{
+			return std::make_tuple(std::move(url), std::move(path));
+		}
+
+		base.assign(url.begin(), pos);
+		path.assign(pos, url.end());
+		return std::make_tuple(std::move(base), std::move(path));
 	}
 
 }
