@@ -1,3 +1,4 @@
+	* improve support for HTTP redirects for web seeds
 	* use string_view in entry interface
 	* deprecate "send_stats" property on trackers (since lt_tracker extension has
 	  been removed)
